<resources>
    <string name="app_name">"Попутчик Беларусь"</string>

    <!-- menu_toolbar -->

    <string name="search_title">Поиск попутчика</string>

    <!-- menu_toolbar navigation -->

    <string name="exit_mn">Выход</string>
    <string name="settings_mn">Учетная запись</string>
    <string name="search_mn">Поиск</string>
    <string name="create_road">Создать маршрут</string>
    <string name="create_req">Создать заявку</string>
    <string name="my_route_mn">Мои маршруты</string>
    <string name="registration_mn">Зарегистрироваться</string>
    <string name="enter_mn">Войти</string>
    <string name="i_am_driver_mn">Я водитель</string>
    <string name="i_am_companion_mn">Я попутчик</string>

    <!-- view navigation -->

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <!-- navigation header -->

    <string name="unautorization_user">Не авторизированный пользователь</string>
    <string name="set_label">Настройки</string>
    <string name="set_save_settings">Сохранить</string>
    <string name="reg_label">Регистрация</string>
    <string name="reg_registration_reg">Зарегистрироваться</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search">Поиск</string>

    <!-- search -->
    <string name="start">Пункт отправления</string>
    <string name="finish">Пункт прибытие</string>
    <string name="startpageText">Обработка данных</string>
    <string name="loginEnter">Авторизоваться</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="email">Адрес электронной почты</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="aboutuser">О себе</string>
    <string name="phone">Телефон</string>
    <string name="create">Создать</string>
    <string name="additional_information_about_the_route">Дополнительная информация</string>
    <string name="count_free_place">1</string>
    <string name="createRoad">Созадть маршрут</string>
    <string name="createReqest">Созадть заявку</string>
    <string name="searchRoad">Найти маршрут</string>
    <string name="searchPopytchikov">Поиск попутчиков</string>
    <string name="popular">Популярное</string>
</resources>
