<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:padding="8dp">
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/create_my_road"
               android:background="@color/av_registration"
               android:textColor="@color/fon_main"
               android:text="@string/createRoad"
               android:textSize="@dimen/sizeText"
               android:layout_marginRight="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_my_req"
            android:background="@color/av_registration"
            android:textColor="@color/fon_main"
            android:text="@string/createReqest"
            android:textSize="@dimen/sizeText"
            android:layout_marginLeft="20dp"/>
       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="8dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_road"
            android:background="@color/av_registration"
            android:textColor="@color/fon_main"
            android:text="@string/searchRoad"
            android:textSize="@dimen/sizeText"
            android:layout_marginRight="20dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_poputchik"
            android:background="@color/av_registration"
            android:textColor="@color/fon_main"
            android:text="@string/searchPopytchikov"
            android:textSize="@dimen/sizeText"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>