<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="12dp"
    android:paddingLeft="12dp"
    android:paddingTop="12dp"
    android:background="@color/color_fon">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2">
        <include android:id="@+id/search_infa"
            layout="@layout/field_start_and_finish"></include>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="24dp">
        <TextView
            android:id="@+id/fragment_create_new_way_textview_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:textAlignment="center"
            android:text="13:57"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout5">
        <TextView
            android:id="@+id/fragment_create_new_way_textview_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:textAlignment="center"
            android:text="30 апреля"
            android:textSize="32sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="52dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_plus"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_chevron_left_white_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_free_place"
                android:textSize="60sp"
                android:layout_gravity="center"
                android:paddingRight="28dp"
                android:paddingLeft="28dp"
                android:id="@+id/textView_count_Free"
                />
            <Button
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_minus"
                android:layout_weight="1"
                android:background="@drawable/ic_chevron_right_white_24dp"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/fragment_create_new_way_editText_infa_about_way"
        android:hint="@string/additional_information_about_the_route"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/fragment_create_new_way_button_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_search"
            android:text="@string/create"
            android:textAlignment="center" />
    </LinearLayout>



</RelativeLayout>